--- a/examples/bayesian-deconvolve-randomwalk.Rmd
+++ b/examples/bayesian-deconvolve-randomwalk.Rmd
@@ -22,7 +22,7 @@ The model assumes the following:
 library(ggplot2)
 library(dplyr)
 library(rstan)
-source('../R/util.R')
+source('../R/convolve_delay.R')
 source('../R/seir.R')
 ```
 
@@ -105,12 +105,12 @@ model_input_data <- list(
 
 ## Fit
 
-(Should just take a minute or so.)
+(Needs some massaging of control parameters to avoid warnings.)
 
 ```{r}
 fit <- sampling(
   model, model_input_data, chains = 1, cores = 1,
-  control = list(adapt_delta = 0.9)
+  control = list(adapt_delta = 0.99, max_treedepth = 50)
 )
 params <- rstan::extract(fit)
 ```
@@ -143,5 +143,4 @@ ggplot(result_df) +
   geom_line(data = obs_df, mapping = aes(x = time, y = y), lty = 2)
 ```
 
-The estimates have much tighter confidence intervals, but perhaps a bit more
-weirdness as you get into the censored region.
+The estimates have much tighter confidence intervals.
